expose_ingresses/ingresses/airflow-ingress-stg.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow-stg
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: airflow-ingress
spec:
  rules:
    - http:
        paths:
          - path: /airflow-stg/*
            backend:
              serviceName: airflow-webserver
              servicePort: 8080
